[package]
name = "try-lock"
version = "0.2.5" # remember to update html_root_url
description = "A lightweight atomic lock."
keywords = ["lock", "atomic"]
categories = ["concurrency", "no-std"]
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
repository = "https://github.com/seanmonstar/try-lock"
homepage = "https://github.com/seanmonstar/try-lock"
documentation = "https://docs.rs/try-lock"
readme = "README.md"

[dependencies]
# Enables the use on platforms without atomic CAS. This is a feature and not
# on-by-default to account for the MSRV 1.31; when that version is increased,
# this may become an unconditional dependency for simplicity.
portable-atomic = { version = "1.3.0", default-features = false, features = ["require-cas"], optional = true }
